--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     image: neo4j:4.4
     environment:
       NEO4J_AUTH: ${KG_USER}/${KG_PSSWD}
+      NEO4JLABS_PLUGINS: '["apoc"]'
+      NEO4J_dbms_security_procedures_unrestricted: "apoc.*"
+      NEO4J_dbms_security_procedures_allowlist: "apoc.meta.data"
     ports:
       - "7687:7687"
       - "7474:7474"
